# mdbook-betterlink

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  README_zh.md
.github/workflows/: release.yml
docs/: CHANGELOG.md  HELP.md  HELP_zh.md
src/: attributes.rs  command.rs  handler.rs  lib.rs  link_checker.rs  main.rs
src/handler/: book_handler.rs  config.rs  mod.rs  processor.rs
src/handler/book_handler/: old_tag_adder.rs  tag_adder.rs
src/link_checker/: config.rs  link_state.rs  mod.rs  path_checker.rs
src/tests/: mod.rs  tag_adder.rs
tests/: tag_adder.rs
