[package]
name = "mdbook-betterlink"
version = "0.4.0"
authors = ["TickPoints <tickpoints@outlook.com>"]
description = "Plugin that provides better hyperlink effects for mdbook."
edition = "2024"
license = "MIT"
repository = "https://github.com/TickPoints/mdbook-betterlink"
keywords = ["mdbook", "markdown", "documentation"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# core
mdbook = { version = "0.4", default-features = false }

# command
clap = { version = "4.5", features = ["cargo"] }

# logger
log = "0.4"
env_logger = "0.11"

# parser
serde_json = "1.0"
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "21.0"
url = "2.5"
## Matches the current older version of the mdbook.
## When mdbook is stable at 0.5, it is promoted.
toml = "0.5"

[profile.release]
lto = true
strip = "symbols"
panic = "abort"
incremental = false
codegen-units = 1
# Only on `-pre` release
# debug = true
# debug-assertions = true
